--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -7,7 +7,7 @@
     width: 100%;
     margin-bottom: 5%;
     margin-left: 5px;
-    margin-right: 5px;
+    margin-right: 10px;
     border-radius: 5px;
     font-family: 'co-headline', Arial sans-serif;
     box-shadow: inset 5px 0 10px rgb(135,151,151);
@@ -15,6 +15,7 @@
         width: 25%;
         box-shadow: inset 2px 0 5px rgb(135,151,151);
         color : White;
+        margin-right: 10px;
         font-size: 1.3rem;
         font-style: italic;
         padding: 5px;
@@ -34,7 +35,7 @@
         font-size: 1.8rem;
         font-style: italic;
         color : $secondary-color;
-
+        margin-right: 10px;
     }
 }
 
@@ -44,6 +45,8 @@
     flex-direction : row;
     width: 100%;
     height: auto;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 // Menu gauche
 .menu-admin {;
@@ -202,16 +205,9 @@
 // Card centrale
 
 .card-central-admin {
-    width: 45%;
+    width: 75%;
     box-shadow: inset 2px 0 10px rgb(223,216,222);
     border-radius: 5px;
+    margin-right: 5px;
 
-}
-
-// Card left
-
-.card-right-admin {
-    width: 30%;
-    box-shadow: inset 2px 0 10px rgb(223,216,222);
-    border-radius: 5px;
 }
