--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <div class="container">
+
+    <div class="container jumbotron">
         <div class="row">
             <div class="col-12 mx-auto text-center form p-4">
                 <h1 class="primary-title">Dernière étape</h1>
@@ -10,4 +11,68 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h4>Votre téléphone a t-il était immergé dans l'eau ?</h4>
+            </div>
+            <div class="col-4">
+                {{ form_widget(form.liquid_damage, {'attr': {'class': 'form-control mb-3', 'placeholder': ''}}) }}
+            </div>
+        </div>
+    </div>
+
+    <div class="container jumbotron">
+        <div class="row">
+            <div class="col-12">
+                <h4>Votre écran est-il endommagé ?</h4>
+            </div>
+            <div class="col-4">
+                {{ form_widget(form.screenCracks, {'attr': {'class': 'form-control mb-3', 'placeholder': ''}}) }}
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h4>Votre coque est-elle endommagée ?</h4>
+            </div>
+            <div class="col-4">
+                {{ form_widget(form.casingCracks, {'attr': {'class': 'form-control mb-3', 'placeholder': ''}}) }}
+            </div>
+        </div>
+    </div>
+
+    <div class="container jumbotron">
+        <div class="row">
+            <div class="col-12">
+                <h4>Avez vous des problème de charge au niveau de votre batterie ?</h4>
+            </div>
+            <div class="col-4">
+                {{ form_widget(form.batteryCracks, {'attr': {'class': 'form-control mb-3', 'placeholder': ''}}) }}
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h4>Tous vos bouttons sont-ils fonctionnels ?</h4>
+            </div>
+            <div class="col-4">
+                {{ form_widget(form.buttonCracks, {'attr': {'class': 'form-control mb-3', 'placeholder': ''}}) }}
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                {{ form_row(form.submit, {'label': 'Valider', 'class': 'btn btn-primary'}) }}
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
