Changement de taille et de marge pour le logo

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -89,8 +89,8 @@ header{
     .logo-bipbip{
         display : block;
         width : 80%;
-        max-width : 325px;
-        margin : auto;
+        max-width : 350px;
+        margin : 2vw auto;
 
         img{
             width : 100%;
