--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -203,7 +203,7 @@ header{
 footer {
     li{
         text-align : center;
-        margin : 4%;
+        margin : 10px;
         font-size : 1rem;
     }
 
@@ -217,6 +217,8 @@ footer {
             text-align : center;
             display : block;
             margin : 0 2%;
+            width : 30%;
+            max-width : 80px;
 
             img{
                 width : 75%;
@@ -249,6 +251,12 @@ footer {
                     font-size: 1.1rem;
                 }
             }
+        }
+    }
+
+    footer{
+        .social-networks{
+            margin: 5% auto;
         }
     }
 }
