--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -59,7 +59,7 @@ a{
     position : relative;
     text-transform : uppercase;
     font-size : 1rem;
-    font-weight: bold;
+    font-weight: 500;
     color : $secondary-color;
     text-align : center;
     padding : 2%;
@@ -95,29 +95,68 @@ header{
         }
     }
 
-    nav{
+    #menu{
+        display : none;
+        z-index : 9999;
+        background : #FFFFFF;
+        padding : 3em 2em;
+        width : 100%;
+        height : 100%;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        #header-menu{
+            display : flex;
+            justify-content : space-around;
+            align-items : center;
+
+            .close-button{
+                width : 15%;
+            }
+        }
+
+        ul{
+            .primary-title-menu{
+                &:after{
+                    left : 32%;
+                }
+
+                a{
+                    color : $secondary-color;
+                }
+            }
+        }
+    }
+
+    #menu.displayed{
+        display : block;
+    }
+
+    .circle-buttons{
         display : flex;
         justify-content: space-between;
 
-        .menu-burger{
+        #menu-burger{
             display : flex;
             flex-direction : column;
             justify-content : center;
             align-items: center;
             border-radius : 50%;
             width : 8vw;
-            min-width: 70px;
+            min-width : 70px;
             height : 8vw;
             min-height: 70px;
             background-color : $primary-color;
             position : fixed;
-            z-index : 9999;
             right : 5vw;
             bottom : 5vh;
+            z-index : 5;
 
             img{
                 width : 30%;
-                margin-bottom: 8%;
+                margin-bottom : 8%;
             }
 
             p{
@@ -127,25 +166,25 @@ header{
             }
         }
 
-        .faq-button{
+        #faq-button{
             display : flex;
             justify-content : center;
             align-items : center;
             border-radius : 50%;
             width : 8vw;
-            min-width: 70px;
+            min-width : 70px;
             height : 8vw;
             min-height: 70px;
             background-color : black;
             position : fixed;
-            z-index : 9999;
             left : 5vw;
             bottom : 5vh;
+            z-index : 5;
 
-            p{
+            a{
                 color : white;
                 font-size : 0.8rem;
-                margin : 0;
+                margin-bottom : 0;
             }
         }
     }
