--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,37 +10,53 @@
         {% endblock %}
     </head>
     <body>
+    {% block header %}
         <header>
+            <nav id="menu">
+                <div id="header-menu">
+                    <a href="{{ path('home') }}" class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></a>
+                    <img src="/images/close-button.png" alt="Fermer le menu" class="close-button"/>
+                </div>
+                <ul>
+                    <li class="primary-title primary-title-menu"><a href="{{ path('home') }}" title="Accueil">Accueil</a></li>
+                    <li class="primary-title primary-title-menu"><a href="#" title="Qui sommes-nous ?">Qui sommes-nous ?</a></li>
+                    <li class="primary-title primary-title-menu"><a href="#" title="Nos partenaires">Nos partenaires</a></li>
+                    <li class="primary-title primary-title-menu"><a href="{{ path('add_message') }}" title="Nous contacter">Contact</a></li>
+                    <li class="primary-title primary-title-menu"><a href="#" title="Estime ton mobile">Estime ton mobile</a></li>
+                </ul>
+            </nav>
             <a href="{{ path('home') }}" class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></a>
-            <nav>
-                <div class="menu-burger">
+            <div class="circle-buttons">
+                <div id="menu-burger">
                     <img src="/images/menu-burger.png" alt="menu burger" />
                     <p>Menu</p>
                 </div>
-                <div class="faq-button">
-                    <p>FAQ</p>
+                <div id="faq-button">
+                    <a href="{{ path('show_faq') }}">FAQ</a>
                 </div>
-            </nav>
+            </div>
         </header>
+        {% endblock %}
 
         {% block body %}
         {% endblock %}
 
+        {% block footer %}
         <footer>
             <h2 class="primary-title">Plus d'infos</h2>
             <ul>
-                <li><a href="#" title="Page qui-sommes-nous">Qui sommes-nous ?</a></li>
+                <li><a href="{{ path('qui-sommes-nous') }}" title="Page qui-sommes-nous">Qui sommes-nous ?</a></li>
                 <li><a href="#" title="Revendre ton tèl">Revendre ton tèl</a></li>
                 <li><a href="#" title="Offre étudiants">Offre étudiants</a></li>
-                <li><a href="#" title="On recrute">On recrute</a></li>
+                <li><a href="{{ path('recrute') }}" title="On recrute">On recrute</a></li>
                 <li><a href="#" title="Presse Kit">Presse Kit</a></li>
                 <li><a href="#" title="Devenir organisateur de collecte">Tu veux devenir organisateur de collecte</a></li>
                 <li><a href="#" title="Collectes et évènements">Collectes et évènements</a></li>
-                <li><a href="#" title="FAQ">Besoin d'aide ?</a></li>
+                <li><a href="{{ path('show_faq') }}" title="FAQ">Besoin d'aide ?</a></li>
                 <li><a href="#" title="Paiement">Paiement</a></li>
                 <li><a href="#" title="Livraison">Livraison</a></li>
                 <li>Ce que l'on oublie de lire (
-                    <a href="#" title="Conditions Générales de Vente">CGV</a>
+                    <a href="{{ path('cgu') }}" title="Conditions Générales de Vente">CGV</a>
                      -
                     <a href="#" title="Conditions Générales d'Utilisation">CGU</a>
                      -
@@ -66,6 +82,7 @@
                 </a>
             </div>
         </footer>
+        {% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
