Fix bug sur estimation

--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h4>Votre téléphone a t-il était immergé dans l'eau ?</h4>
+                <h4>Votre téléphone a t-il été immergé dans l'eau ?</h4>
             </div>
             <div class="col-4">
                 {{ form_widget(form.liquid_damage, {'attr': {'class': 'form-control mb-3', 'placeholder': ''}}) }}
@@ -48,7 +48,7 @@
     <div class="container jumbotron">
         <div class="row">
             <div class="col-12">
-                <h4>Avez vous des problème de charge au niveau de votre batterie ?</h4>
+                <h4>Avez vous des problèmes de charge au niveau de votre batterie ?</h4>
             </div>
             <div class="col-4">
                 {{ form_widget(form.batteryCracks, {'attr': {'class': 'form-control mb-3', 'placeholder': ''}}) }}
