--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -52,6 +52,7 @@ body{
 
 a{
     color : black;
+    cursor : pointer;
 }
 
 .primary-title{
@@ -62,10 +63,14 @@ a{
     font-weight: 500;
     color : $secondary-color;
     text-align : center;
-    padding : 2%;
+    padding : 1%;
     box-shadow : 0 5px 15px #9f9f9f;
     border-radius : 5px;
-    width : 80%;
+    width : 70%;
+    min-width: 300px;
+    max-width : 500px;
+    min-height: 40px;
+    max-height : 60px;
     margin : 12% auto;
 
     &:after{
@@ -88,7 +93,8 @@ header{
     .logo-bipbip{
         display : block;
         width : 80%;
-        margin : auto;
+        max-width : 350px;
+        margin : 2vw auto;
 
         img{
             width : 100%;
@@ -107,20 +113,26 @@ header{
         left: 50%;
         transform: translate(-50%, -50%);
 
-        #header-menu{
-            display : flex;
-            justify-content : space-around;
-            align-items : center;
-
-            .close-button{
-                width : 15%;
-            }
+        .close-button{
+            width : 30%;
+            max-width : 50px;
+            position : absolute;
+            top : 3%;
+            right : 3%;
         }
 
         ul{
             .primary-title-menu{
+                max-width : 300px;
+                margin : 20px auto;
+                min-height : 45px;
+                max-height : 50px;
+                display : flex;
+                justify-content: center;
+                align-items : center;
+
                 &:after{
-                    left : 32%;
+                    display:none;
                 }
 
                 a{
@@ -137,6 +149,7 @@ header{
     .circle-buttons{
         display : flex;
         justify-content: space-between;
+        cursor : pointer;
 
         #menu-burger{
             display : flex;
@@ -160,7 +173,7 @@ header{
             }
 
             p{
-                font-size : 0.8rem;
+                font-size : 1rem;
                 color : white;
                 margin-bottom : 0;
             }
@@ -183,7 +196,7 @@ header{
 
             a{
                 color : white;
-                font-size : 0.8rem;
+                font-size : 1rem;
                 margin-bottom : 0;
             }
         }
@@ -194,7 +207,7 @@ header{
 footer {
     li{
         text-align : center;
-        margin : 4%;
+        margin : 10px;
         font-size : 1rem;
     }
 
@@ -212,6 +225,43 @@ footer {
             img{
                 width : 75%;
             }
+        }
+    }
+}
+
+
+/* MEDIA QUERIES */
+@media screen and (min-width: 740px) {
+    .primary-title{
+        font-size : 1.4rem;
+    }
+    header {
+        .circle-buttons {
+            #menu-burger {
+                align-self: flex-start;
+                border-radius: 5px;
+                box-shadow: 5px 3px 10px $primary-color;
+                width: 120px;
+                min-height: 40px;
+                height: 40px;
+                position: absolute;
+                top: 50px;
+                right: 50px;
+
+                img {
+                    display: none;
+                }
+
+                p {
+                    font-size: 1.1rem;
+                }
+            }
+        }
+    }
+
+    footer{
+        .social-networks{
+            margin: 5% auto;
         }
     }
 }
