Fix bug path estimation

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -35,7 +35,7 @@
                     <img src="/images/apple-store-mini.png" class="link-app">
                     <img src="/images/google-play-mini.png" class="link-app">
                 </div>
-                <p>Si ton tèl est cassé, <a href="/estimation" title="Lien vers l'estimation en ligne">fais une estimation en ligne</a></p>
+                <p>Si ton tèl est cassé, <a href="{{ path("new_estimation") }}" title="Lien vers l'estimation en ligne">fais une estimation en ligne</a></p>
             </article>
 
             <article>
