change after searchbar

--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -36,9 +36,13 @@
         font-style: italic;
         color : $secondary-color;
         margin-right: 10px;
+    .searchBar {
+        display: flex;
+        justify-content: center;
     }
-}
+    }
 
+}
 // Card genérale
 .cards-admin {
     display : flex;
