--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -16,6 +16,13 @@
         <h1>Bienvenue sur l'interface d'administration</h1>
     </div>
 
+<div class="searchBar">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+<ul id="myUL">
+    <li><a href="#"></a></li>
+</ul>
+</div>
+
 <main class="cards-admin">
     <div class="menu-admin">
         <ul class="icon-menu">
