--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -6,28 +6,17 @@
 
 @mixin button($color){
     background-color : $color;
-    position : relative;
+    border-radius : 5px;
     text-decoration : none;
-    font-size : 1rem;
+    font-size : 1.1rem;
     color : white;
     width : 60%;
+    max-width: 300px;
+    padding : 15px 10px;
+    max-height: 60px;
     display : block;
-    margin : 2% auto 15% auto;
-    padding : 3%;
+    margin : 2% auto 5% auto;
     text-align : center;
-
-    &:after{
-        content : "";
-        height : 0;
-        width : 0;
-        position : absolute;
-        z-index : -1;
-        left : 0;
-        bottom : -4.9vh;
-        border-right: 30vw solid transparent;
-        border-left: 30vw solid transparent;
-        border-top: 5vh solid $color;
-    }
 }
 
 .primary-button{
@@ -40,6 +29,10 @@
 
 .third-button{
     @include button($third-color)
+}
+
+.fourth-button{
+    @include button($fourth-color)
 }
 
 
@@ -56,36 +49,19 @@ a{
 }
 
 .primary-title{
-    background-color : white;
-    position : relative;
     text-transform : uppercase;
     font-size : 1rem;
     font-weight: 500;
-    color : $secondary-color;
+    color : $fourth-color;
     text-align : center;
+    border-bottom : 1px $fourth-color solid;
     padding : 1%;
-    box-shadow : 0 5px 15px #9f9f9f;
-    border-radius : 5px;
     width : 70%;
-    min-width: 300px;
-    max-width : 500px;
+    min-width: 200px;
+    max-width : 400px;
     min-height: 40px;
     max-height : 60px;
-    margin : 12% auto;
-
-    &:after{
-        content : "";
-        height : 0;
-        width : 0;
-        position : absolute;
-        z-index : -1;
-        bottom : -2vh;
-        left : 27vw;
-        text-align : center;
-        border-right: 13vw solid transparent;
-        border-left: 13vw solid transparent;
-        border-top: 2vh solid $secondary-color;
-    }
+    margin : 5% auto;
 }
 
 /* HEADER NAV */
