--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -8,6 +8,10 @@
         text-transform : uppercase;
         line-height: 1.5em;
         width : 80%;
+        @media screen and (min-width: 740px) {
+            width : 50%;
+            font-size: 1.5rem;
+        }
 
         .orange-font{
             color : $primary-color;
@@ -29,8 +33,8 @@
 
         article{
             .step{
-                width : 380px;
-                height : 380px;
+                width : 300px;
+                height : 300px;
                 max-width: 100%;
                 margin : 0 auto;
                 padding : 5% 0;
@@ -49,8 +53,8 @@
                 }
 
                 .step-logo{
-                    margin-top : 30px;
-                    margin-right: 20px;
+                    width : 18%;
+                    margin : 10px 10px 0 0;
                 }
 
                 div{
@@ -59,13 +63,13 @@
                     -moz-transform:skew(-30deg);
                     -o-transform:skew(-30deg);
                     transform:skew(-30deg);
-                    padding : 10px 25px;
-                    width : 200px;
+                    padding : 5px 15px;
+                    margin : 0 5px 15px 0;
+                    width : 150px;
                     vertical-align: center;
-                    margin-right: 20px;
 
                     h3{
-                        font-size : 1.3rem;
+                        font-size : 1.1rem;
                         font-weight: bold;
                         color : white;
                         text-align : center;
@@ -75,10 +79,16 @@
 
                 p{
                     text-transform : uppercase;
-                    font-size : 1rem;
+                    font-size : 0.8rem;
                     text-align : center;
-                    padding-bottom : 75px;
-                    margin: 0 20px 0 0;
+                    margin : 0 10px 25px 0;
+                }
+            }
+
+            #step3{
+                .step-logo{
+                    width : 25%;
+                    margin-top : 15px;
                 }
             }
 
