--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -6,8 +6,6 @@
     flex-direction : row;
     width: 100%;
     margin-bottom: 5%;
-    margin-left: 5px;
-    margin-right: 10px;
     border-radius: 5px;
     font-family: 'co-headline', Arial sans-serif;
     box-shadow: inset 5px 0 10px rgb(135,151,151);
@@ -45,16 +43,16 @@
 }
 // Card genérale
 .cards-admin {
-    display : flex;
-    flex-direction : row;
     width: 100%;
-    height: auto;
-    margin-left: 5px;
-    margin-right: 5px;
+    height: 80%;
 }
 // Menu gauche
 .menu-admin {;
-    width: 25%;
+    display : flex;
+    flex-direction : row;
+    width: 100%;
+
+    margin-right: 5px;
     font-size : 1.4rem;
     color : white;
     text-decoration: none;
@@ -62,10 +60,9 @@
 
     .icon-menu {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         list-style-type: none;
         margin-top: 0;
-        margin-left: 0;
         padding: 0;
         width: 100%;
         height: 100%;
@@ -75,8 +72,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 60px;
-        margin-bottom: 5px;
+        height: 70px;
         border-radius: 5px;
         box-shadow: inset 2px 0 10px rgb(223,216,222);
         a {
@@ -91,9 +87,8 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 60px;
+        height: 70px;
         position:relative;
-        margin-bottom: 5px;
         border-radius: 5px;
         box-shadow: inset 2px 0 10px rgb(223,216,222);
         a {
@@ -105,18 +100,17 @@
         .collecterActionsLister{
             display : none;
             position: absolute;
-            left: 102%;
-            top : -33%;
+            bottom : -72%;
             width: 100%;
-            height: 30px;
-            margin-left: 3px;
+            height: 50px;
             border-radius: 5px;
             box-shadow: inset 2px 0 10px rgb(223,216,222);
+            color: $secondary-color;
         }
         .collecterActionsLister.displayed {
             display: block;
             width: 100%;
-            height: 30px;
+            height: 50px;
             border-radius: 5px;
             box-shadow: inset 2px 0 10px rgb(223,216,222);
             color: $secondary-color;
@@ -125,18 +119,17 @@
         .collecterActionsAdd{
             display : none;
             position: absolute;
-            left: 102%;
-            top : 22%;
+            bottom: -143%;
             width: 100%;
-            height: 30px;
-            margin-left: 3px;
+            height: 50px;
             border-radius: 5px;
             box-shadow: inset 2px 0 10px rgb(223,216,222);
+            color: $secondary-color;
         }
         .collecterActionsAdd.displayed {
             display: block;
             width: 100%;
-            height: 30px;
+            height: 50px;
             border-radius: 5px;
             box-shadow: inset 2px 0 10px rgb(223,216,222);
             color: $secondary-color;
@@ -149,8 +142,7 @@
         align-items: center;
         position: relative;
         width: 100%;
-        height: 60px;
-        margin-bottom: 5px;
+        height: 70px;
         border-radius: 5px;
         box-shadow: inset 2px 0 10px rgb(223,216,222);
             a {
@@ -166,10 +158,8 @@
             display : none;
             position: absolute;
             width: 100%;
-            height: 70px;
-            left: 102%;
-            top : -29%;
-            margin-left: 3px;
+            height: 50px;
+            bottom: -72%;
             border-radius: 5px;
             box-shadow: inset 2px 0 10px rgb(223,216,222);
             color: $secondary-color;
@@ -177,7 +167,7 @@
         .officialDocumentsBc.displayed {
             display: block;
             width: 100%;
-            height: 30px;
+            height: 50px;
             border-radius: 5px;
             box-shadow: inset 2px 0 10px rgb(223,216,222);
             color: $secondary-color;
@@ -187,10 +177,8 @@
             display : none;
             position: absolute;
             width: 100%;
-            height: 70px;
-            left: 102%;
-            top : 26%;
-            margin-left: 3px;
+            height: 50px;
+            bottom: -143%;
             border-radius: 5px;
             box-shadow: inset 2px 0 10px rgb(223,216,222);
             color: $secondary-color;
@@ -198,7 +186,7 @@
         .officialDocumentsCi.displayed {
             display: block;
             width: 100%;
-            height: 30px;
+            height: 50px;
             border-radius: 5px;
             box-shadow: inset 2px 0 10px rgb(223,216,222);
             color: $secondary-color;
@@ -209,7 +197,7 @@
 // Card centrale
 
 .card-central-admin {
-    width: 75%;
+    width: 100%;
     box-shadow: inset 2px 0 10px rgb(223,216,222);
     border-radius: 5px;
     margin-right: 5px;
