--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -16,8 +16,8 @@
         <h1>Bienvenue sur l'interface d'administration</h1>
     </div>
 
-<div class="searchBar">
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+<div class="form-group">
+<input class="form-control" type="text" id="search-user" value="" placeholder="Recherche par nom">
 <ul id="myUL">
     <li><a href="#"></a></li>
 </ul>
@@ -27,13 +27,15 @@
     <div class="menu-admin">
         <ul class="icon-menu">
             <li class="estimations"><a href="#">Estimations</a></li>
-            <li class="collecters"><a href="#">Collecteurs</a>
-                    <p class="collecterActionsLister">Lister</p>
-                    <p class="collecterActionsAdd">Ajouter</p>
+            <li class="collecters">
+                <a href="#">Collecteurs</a>
+                    <button type="button" class="collecterActionsLister">Lister</button>
+                    <button type="button" class="collecterActionsAdd">Ajouter</button>
             </li>
-            <li class="officialDocuments"><a href="#">Documents stockés</a>
-                    <p class="officialDocumentsBc">Bons de cessions</p>
-                    <p class="officialDocumentsCi">Cartes d'identitées</p>
+            <li class="officialDocuments">
+                <a href="#">Documents stockés</a>
+                    <button type="button" class="officialDocumentsBc">Bons de cessions</button>
+                    <button type="button" class="officialDocumentsCi">Cartes d'identitées</button>
             </li>
         </ul>
     </div>
