--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -13,10 +13,13 @@
     width : 60%;
     max-width: 300px;
     padding : 15px 10px;
-    max-height: 60px;
+    max-height: 70px;
     display : block;
     margin : 2% auto 5% auto;
     text-align : center;
+    @media screen and (min-width: 740px) {
+        font-size: 1rem;
+    }
 }
 
 .primary-button{
@@ -61,7 +64,7 @@ a{
     max-width : 400px;
     min-height: 40px;
     max-height : 60px;
-    margin : 7% auto;
+    margin : 30px auto;
 }
 
 /* HEADER NAV */
