--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -12,6 +12,10 @@
             width : 50%;
             font-size: 1.5rem;
         }
+        @media screen and (min-width: 1025px) {
+            width : 50%;
+            font-size: 1.7rem;
+        }
 
         .orange-font{
             color : $primary-color;
@@ -30,19 +34,44 @@
 
     /* STEPS */
     .steps {
+        display : flex;
+        flex-direction : column;
+        justify-content : flex-start;
+        align-items : center;
+        @media screen and (min-width: 740px){
+            display : flex;
+            flex-direction : row;
+            justify-content:  space-around;
+            align-items: flex-start;
+            width : 80%;
+            margin : auto;
+        }
 
         article{
+            width : 300px;
+            @media screen and (min-width: 1025px){
+                width : 350px;
+            }
+
             .step{
                 width : 300px;
                 height : 300px;
                 max-width: 100%;
                 margin : 0 auto;
-                padding : 5% 0;
+                padding : 12% 0;
                 display : flex;
                 flex-flow : column wrap;
                 justify-content: space-around;
                 align-items: center;
                 position: relative;
+                @media screen and (min-width: 740px){
+                    width : 250px;
+                    height : 250px;
+                }
+                @media screen and (min-width: 1025px){
+                    width : 350px;
+                    height : 350px;
+                }
 
                 .background-pic{
                     position: absolute;
@@ -54,7 +83,7 @@
 
                 .step-logo{
                     width : 18%;
-                    margin : 10px 10px 0 0;
+                    margin-right : 10px;
                 }
 
                 div{
@@ -63,17 +92,33 @@
                     -moz-transform:skew(-30deg);
                     -o-transform:skew(-30deg);
                     transform:skew(-30deg);
-                    padding : 5px 15px;
-                    margin : 0 5px 15px 0;
+                    margin-right : 10px;
+                    margin-bottom : 8px;
                     width : 150px;
                     vertical-align: center;
+                    @media screen and (min-width: 740px) {
+                        width : 130px;
+                    }
+                    @media screen and (min-width: 1025px) {
+                        width : 180px;
+                        margin-bottom : 15px;
+                    }
 
                     h3{
                         font-size : 1.1rem;
                         font-weight: bold;
                         color : white;
+                        margin : 0;
+                        padding : 8px 15px;
                         text-align : center;
                         transform:skew(30deg);
+                        @media screen and (min-width: 740px) {
+                            font-size: 1rem;
+                        }
+                        @media screen and (min-width: 1025px) {
+                            padding : 10px 15px;
+                            font-size : 1.1rem;
+                        }
                     }
                 }
 
@@ -82,13 +127,12 @@
                     font-size : 0.8rem;
                     text-align : center;
                     margin : 0 10px 25px 0;
-                }
-            }
-
-            #step3{
-                .step-logo{
-                    width : 25%;
-                    margin-top : 15px;
+                    @media screen and (min-width: 740px) {
+                        font-size: 0.7rem;
+                    }
+                    @media screen and (min-width: 1025px) {
+                        font-size: 1rem;
+                    }
                 }
             }
 
@@ -97,7 +141,7 @@
                 justify-content : center;
 
                 img{
-                    width : 13%;
+                    width : 15%;
                     margin : 7% 4% 3% 4%;
                 }
             }
@@ -120,7 +164,6 @@
             }
 
             ul{
-                list-style-type: disc;
                 text-align: center;
                 line-height: 1.5em;
             }
@@ -133,6 +176,11 @@
             }
 
             #step3{
+                .step-logo{
+                    width : 25%;
+                    margin-top : 15px;
+                }
+
                 div{
                     background-color: $secondary-color;
                 }
