--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -18,7 +18,8 @@
                 <h4>Votre téléphone a t-il été immergé dans l'eau ?</h4>
             </div>
             <div class="col-4">
-                {{ form_widget(form.liquid_damage, {'attr': {'class': 'form-control mb-3', 'placeholder': ''}}) }}
+                {{ form_start(form) }}
+                {{ form_widget(form.liquid_damage, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
             </div>
         </div>
     </div>
@@ -29,7 +30,7 @@
                 <h4>Votre écran est-il endommagé ?</h4>
             </div>
             <div class="col-4">
-                {{ form_widget(form.screenCracks, {'attr': {'class': 'form-control mb-3', 'placeholder': ''}}) }}
+                {{ form_widget(form.screenCracks, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
             </div>
         </div>
     </div>
@@ -40,7 +41,7 @@
                 <h4>Votre coque est-elle endommagée ?</h4>
             </div>
             <div class="col-4">
-                {{ form_widget(form.casingCracks, {'attr': {'class': 'form-control mb-3', 'placeholder': ''}}) }}
+                {{ form_widget(form.casingCracks, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
             </div>
         </div>
     </div>
@@ -51,7 +52,7 @@
                 <h4>Avez vous des problèmes de charge au niveau de votre batterie ?</h4>
             </div>
             <div class="col-4">
-                {{ form_widget(form.batteryCracks, {'attr': {'class': 'form-control mb-3', 'placeholder': ''}}) }}
+                {{ form_widget(form.batteryCracks, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
             </div>
         </div>
     </div>
@@ -62,7 +63,7 @@
                 <h4>Tous vos bouttons sont-ils fonctionnels ?</h4>
             </div>
             <div class="col-4">
-                {{ form_widget(form.buttonCracks, {'attr': {'class': 'form-control mb-3', 'placeholder': ''}}) }}
+                {{ form_widget(form.buttonCracks, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
             </div>
         </div>
     </div>
@@ -71,6 +72,7 @@
         <div class="row">
             <div class="col-4">
                 {{ form_row(form.submit, {'label': 'Valider', 'class': 'btn btn-primary'}) }}
+                {{ form_end(form) }}
             </div>
         </div>
     </div>
