Respondive effectué sur la partie partenaires

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -195,7 +195,15 @@
             text-align : center;
             margin : 5%;
             text-decoration: underline;
+            &:hover{
+                color : $primary-color;
+            }
+            @media screen and (min-width: 740px) {
+                font-size: 1.1rem;
+                margin : 3%;
+            }
         }
+
     }
 
     /* PARTNERS */
@@ -214,10 +222,17 @@
             flex-wrap : wrap;
             margin-bottom : 6%;
             margin-top : 6%;
+            @media screen and (min-width: 740px) {
+                width : 80%;
+                margin : auto;
+            }
 
             img {
                 width : 25%;
                 margin : 5%;
+                @media screen and (min-width: 740px) {
+                    width : 15%;
+                }
             }
         }
     }
