Essai pour inclure le formulaire de contact dans la page d'acueil avec l'embarcation du ContatController mais sans succès..

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -89,6 +89,11 @@
 
         <section class="contact">
             <h2 class="primary-title">Contact</h2>
+            {#{{ render(controller(
+                'App\\Controller\\ContactController::add'
+            )) }}
+            {{ include('contact/_form.html.twig') }}#}
+
             <a href="{{ path('add_message') }}" title="Lien vers la page contact">Contacte nous</a>
         </section>
     </main>
