ajout redirection vers creation profil

--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -7,7 +7,7 @@
                 <h1 class="primary-title">Dernière étape</h1>
                 <h2 class="text-dark">{{ brand }}</h2>
                 <h3 class="text-dark">{{ model }}</h3>
-                <h4 class="text-dark">{{ capacity }}</h4>
+                <h4 class="text-dark">{{ capacity }} Go</h4>
             </div>
         </div>
     </div>
@@ -38,7 +38,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h4>Votre coque est-elle endommagée ?</h4>
+                <h4>La coque du téléphone est-elle endommagée ?</h4>
             </div>
             <div class="col-4">
                 {{ form_widget(form.casingCracks, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
@@ -60,7 +60,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h4>Tous vos bouttons sont-ils fonctionnels ?</h4>
+                <h4>Tous vos boutons sont-ils fonctionnels ?</h4>
             </div>
             <div class="col-4">
                 {{ form_widget(form.buttonCracks, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
