Last change for generating PDF from an estimation ID on route bdc/pdf/{id}

--- a/templates/bdc/bdc.html.twig
+++ b/templates/bdc/bdc.html.twig
@@ -49,18 +49,17 @@
     </table>
     <table>
         <tr>
-            <td style="width:40%;">
-                <p>Création du dossier : {{ "now"|date("d/m/Y") }}</p>
-                <p>Numéro du bon de cession : C{{ estimation.user.id }}E{{ estimation.id }}</p>
+            <td style="width:60%;">
+                <p>Création du dossier : {{ "now"|date("d/m/Y") }}<br>
+                Numéro du bon de cession : {{ "now"|date("Ymd") }}C{{ estimation.user.id }}P{{ estimation.id }}</p>
                 <p>IMEI : {{ IMEI }}</p>
                 <p class="barcode">*{{ IMEI }}*</p>
             </td>
-            <td style="width:60%; padding-left:20px;">
-                <p>Lieu de collecte : Wild Code School - Lille</p>
+            <td style="width:40%; padding-left:20px;">
                 <p>ENVIRO SERVICES FRANCE<br>
                 391 avenue Clément Ader<br>
                 59118 WAMBRECHIES<br>
-                Téléphone : 03 00 00 00 00</p>
+                Téléphone : 03 20 00 00 00</p>
             </td>
         </tr>
     </table>
@@ -73,16 +72,14 @@
                 Marque :<br>
                 Modèle :<br>
                 Montant de la reprise :<br>
-                Grade cosmétique :<br>
                 Paiement immédiat :
             </td>
             <td style="width:60%; padding-left:20px;">
-                ESF{{ estimation.user.id }}<br>
+                {{ estimation.user.id }}<br>
                 MOBILE<br>
                 {{estimation.brand}}<br>
                 {{ estimation.model }} {{ estimation.capacity }} Go<br>
                 {{ estimation.estimatedPrice }} €<br>
-                B<br>
                 Oui
             </td>
         </tr>
@@ -94,10 +91,40 @@
                 Diagnostic :
             </td>
             <td style="width:80%; padding-left:20px;">
-                Votre mobile est-il fonctionnel ? OUI<br>
-                Le LCD est-il fonctionnel ? OUI<br>
-                Le mobile est-il protégé par un mot de passe ou un compte ? NON<br>
-                Grade fonctionnel : OUI
+                Votre téléphone a-t-il été immergé dans l'eau ?
+                {% if estimation.liquidDamage > 0 %}
+                OUI
+                {% else %}
+                NON
+                {%  endif %}
+                <br>
+                Votre écran est-il endommagé ?
+                {% if estimation.screenCracks > 0 %}
+                OUI
+            {% else %}
+                NON
+                {%  endif %}
+                <br>
+                La coque du téléphone est-elle endommagée ?
+                {% if estimation.casingCracks > 0 %}
+                OUI
+            {% else %}
+                NON
+                {%  endif %}
+                <br>
+                Avez-vous des problèmes de charge au niveau de votre batterie ?
+                {% if estimation.batteryCracks > 0 %}
+                OUI
+            {% else %}
+                NON
+                {%  endif %}
+                <br>
+                Tous vos boutons sont-ils fonctionnels ?
+                {% if estimation.buttonCracks > 0 %}
+                    NON
+                {% else %}
+                    OUI
+                {%  endif %}
             </td>
         </tr>
     </table>
@@ -138,10 +165,12 @@
     <table>
         <tr>
             <td style="width:20%" class="bold-text">
+                Lieu de collecte :<br>
                 Code Collecte :<br>
                 Code Association :
             </td>
             <td style="width:30%; padding-left:20px;">
+                Wild Code School - Lille<br>
                 74543829<br>
                 L745
             </td>
@@ -154,11 +183,11 @@
 
     <table style="height:160px;">
         <tr>
-            <td style="width:50%; border:2px solid black;">
-                cachet Enviro Services
+            <td style="width:50%; border:2px solid black; text-align:center;">
+                <img width="100px; margin-top:30px;" src="images/cachet.png" alt="BipBip Mobile">
             </td>
             <td style="width:50%; border:2px solid black;">
-                lu et approuvé
+
             </td>
         </tr>
     </table>
