Add commentary row 175 and correction orthographe on view twig

--- a/templates/estimation/final_price.html.twig
+++ b/templates/estimation/final_price.html.twig
@@ -11,7 +11,7 @@
                 <h3 class="secondary-button">{{ estimation.estimatedPrice }} Euros</h3>
                 {% endif %}
                 <div class="jumbotron">
-                    <h4>Pour finaliser la vente de ton téléphone, tu dois créer ton compte et accéder aux lieu de collecte</h4>
+                    <h4>Pour finaliser la vente de ton téléphone, tu dois créer ton compte et accéder aux lieux de collecte</h4>
                     <a class="btn btn-primary" href="{{ path("user_add") }}">Créer mon compte</a>
                 </div>
 
