--- a/templates/estimation/index.html.twig
+++ b/templates/estimation/index.html.twig
@@ -8,6 +8,7 @@
                 {% for brand in brands %}
                 <a class="btn btn-success" href="{{ path('estimation_brand', {'brand':brand}) }}">{{ brand }}</a>
                 {% endfor %}
+                <a class="btn btn-primary" href="">Autres...</a>
             </div>
         </div>
     </div>
