--- a/templates/estimation/model.html.twig
+++ b/templates/estimation/model.html.twig
@@ -10,5 +10,12 @@
                 {% endfor %}
             </div>
         </div>
+        <div class="row">
+            <div class="col-5 text-center"></div>
+            <div class="col-4">
+                <a class="btn btn-primary" href="{{ path("autres") }}">Autres...</a>
+            </div>
+        </div>
     </div>
+
 {% endblock %}
