--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -77,4 +77,11 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-5 text-center"></div>
+        <div class="col-4">
+            <a class="btn btn-info" href="{{ path("home") }}">Retour à l'accueil</a>
+        </div>
+    </div>
+
 {% endblock %}
