--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -16,13 +16,6 @@
         <h1>Bienvenue sur l'interface d'administration</h1>
     </div>
 
-<div class="form-group">
-<input class="form-control" type="text" id="search-user" value="" placeholder="Recherche par nom">
-<ul id="myUL">
-    <li><a href="#"></a></li>
-</ul>
-</div>
-
 <main class="cards-admin">
     <div class="menu-admin">
         <ul class="icon-menu">
@@ -40,7 +33,7 @@
         </ul>
     </div>
     <div class="card-central-admin">
-        <p></p>
+        {% block body %}{% endblock %}
     </div>
 
 
