--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -102,10 +102,7 @@ header{
         padding : 3em 2em;
         width : 100%;
         height : 100%;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+
 
         #header-menu{
             display : flex;
@@ -126,6 +123,18 @@ header{
                 a{
                     color : $secondary-color;
                 }
+            }
+        }
+
+        .user-infos-menu{
+            text-align: center;
+
+            h3{
+                color : $primary-color;
+            }
+
+            a{
+                display : block;
             }
         }
     }
