Ajout des balises en fonction du type d'utilisateur. Customisation de ces liens

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -136,6 +136,15 @@ header{
             a{
                 display : block;
             }
+
+            .disconnection{
+                color : darkred;
+            }
+
+            .connect{
+                color : $primary-color;
+                font-weight: 500;
+            }
         }
     }
 
