--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -102,7 +102,10 @@ header{
         padding : 3em 2em;
         width : 100%;
         height : 100%;
-
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
         #header-menu{
             display : flex;
